src/objects/c2g__InquiryTemplateSignFilter__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CombineType__c</fullName>
        <label>Combine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template Sign Filters</relationshipLabel>
        <relationshipName>InquiryTemplateSignFilters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__From__c</fullName>
        <label>From</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Sign Filters</relationshipLabel>
        <relationshipName>InquiryTemplateSignFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__To__c</fullName>
        <label>To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Inquiry Template Sign Filter</label>
    <nameField>
        <displayFormat>ITSF-{00000000}</displayFormat>
        <label>Sign Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Template Sign Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>